# fmlib-cpp

./: .gitignore  LICENSE  appveyor.yml  mkdocs.yml
FMLib/FMLib/: CMakeLists.txt
FMLib/FMLib/inc/: Data.hpp  DataReader.h  DataReader.hpp  DiscPatcher.h  DiscPatcher.hpp  Extern.hpp  FMLib.h  FMLib.hpp
FMLib/FMLib/inc/Models/: Card.h  Card.hpp  Duelist.h  Duelist.hpp  Fusion.hpp  GameFile.hpp  Models.hpp  Rank.h  Rank.hpp  Ritual.hpp  Starchips.hpp
FMLib/FMLib/src/: Data.cpp  DataReader.cpp  DiscPatcher.cpp  Extern.cpp  FMLib.cpp
FMLib/FMLib/src/Models/: Duelist.cpp  Rank.cpp
docs/: index.md  reference.md
